
CHANGELOG
=================================================

= 2.1.5 =
-------------------------------------------------
- Improved: Added CoursePress version to export file.
- Fixed: Added course categories information in export file.
- Fixed: Check MarketPress integration to avoid warnings.
- Fixed: Mistakes in language strings.
- Fixed: Problem with login form on small screens like mobile.

= 2.1.4 =
-------------------------------------------------
* Fixed: Course certificate email settings were hidden for nonpremium users.
* Fixed: Discussion layout issue.
* Fixed: Missing new instructor on instructors list.
* Fixed: On a course structure show section without modules if "Show units without modules" is checked.
* Fixed: PHP notices when try to edit not exited unit.
* Fixed: Problem with display course sub-menu on the frontend.
* Fixed: Show unit progress on admin panel.
* Fixed: There was no ability to remove instructor.
* Fixed: Typo in notifications configuration.
* Fixed: Typo in MarketPress integration box.
* Improved: Added filters to get_time_estimation() functions: coursepress_course_get_time_estimation, coursepress_unit_get_time_estimation, coursepress_module_get_time_estimation.
* Improved: Prevent save units before fetching all data.
* Improved: Force recalculate number of courses on Instructors Screen.
* Improved: Prevent saves units before fetching all data.

= 2.1.3 =
-------------------------------------------------
* Fixed: Unit and Pages TinyMCE editor does not work after WordPress update to 4.9.

= 2.1.2 =
-------------------------------------------------
* Improved: Add ability to define certificate logo.
* Improved: Show instructor feedback on student workbook frontend.
* CoursePress Theme: Fixed display of HTML Bullet points.
* CoursePress Theme: Fixed expanded unit list view mode.
* CoursePress Theme: Improved bbPress compatibility.
* Fixed: Expanded unit list view mode not working for students.